// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should complete subscription by disposing 1`] = `
Object {
  "data": Object {
    "ping": "pong",
  },
}
`;

exports[`should execute a simple query 1`] = `
Object {
  "data": Object {
    "getValue": "value",
  },
}
`;
